--- a/internal/autoconfig/config.yaml.tmpl
+++ b/internal/autoconfig/config.yaml.tmpl
@@ -186,7 +186,7 @@ spec:
 {{ end }}
 ---
 {{- if .OpenAI }}
-apiVersion: aigateway.envoyproxy.io/v1alpha1
+apiVersion: aigateway.envoyproxy.io/v1beta1
 kind: AIGatewayRoute
 metadata:
   name: aigw-run
@@ -217,7 +217,7 @@ spec:
 ---
 {{- end }}
 {{- if .Anthropic }}
-apiVersion: aigateway.envoyproxy.io/v1alpha1
+apiVersion: aigateway.envoyproxy.io/v1beta1
 kind: AIGatewayRoute
 metadata:
   name: aigw-run
@@ -301,7 +301,7 @@ spec:
 ---
 {{- end }}
 {{- if .OpenAI }}
-apiVersion: aigateway.envoyproxy.io/v1alpha1
+apiVersion: aigateway.envoyproxy.io/v1beta1
 kind: AIServiceBackend
 metadata:
   name: {{ .OpenAI.BackendName }}
@@ -334,7 +334,7 @@ spec:
 ---
 {{- end }}
 {{- if .Anthropic }}
-apiVersion: aigateway.envoyproxy.io/v1alpha1
+apiVersion: aigateway.envoyproxy.io/v1beta1
 kind: AIServiceBackend
 metadata:
   name: {{ .Anthropic.BackendName }}
@@ -403,7 +403,7 @@ stringData:
   apiKey: ${OPENAI_API_KEY}
 {{- end }}
 ---
-apiVersion: aigateway.envoyproxy.io/v1alpha1
+apiVersion: aigateway.envoyproxy.io/v1beta1
 kind: BackendSecurityPolicy
 metadata:
   name: openai-apikey
@@ -436,7 +436,7 @@ type: Opaque
 stringData:
   apiKey: ${ANTHROPIC_API_KEY}
 ---
-apiVersion: aigateway.envoyproxy.io/v1alpha1
+apiVersion: aigateway.envoyproxy.io/v1beta1
 kind: BackendSecurityPolicy
 metadata:
   name: anthropic-apikey
